infras/k8s_test/comment-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: comment-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comment
  template:
    metadata:
      labels:
        app: comment
    spec:
      containers:
        - name: comment
          image: longle2003/comment
---

apiVersion: v1
kind: Service
metadata:
  name: comment-srv
spec: 
  selector:
    app: comment
  ports:
    - name: comment
      protocol: TCP
      port: 4001
      targetPort: 4001
