infras/k8s_test/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/websocket-services: client-srv
    nginx.org/websocket-services: client-nodeport-srv
    kubernetes.io/ingress.allow-http: "false"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec: 
  ingressClassName: nginx
  rules:
    - host: www.nt533uitjiradev.click
      http:
        paths:
          - path: /api/users/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port: 
                  number: 4000
          - path: /api/comment/?(.*)
            pathType: Prefix
            backend: 
              service:  
                name: comment-srv
                port:
                  number: 4001
          - path: /api/issue/?(.*)
            pathType: Prefix
            backend: 
              service:  
                name: issue-srv
                port:
                  number: 4002
          - path: /api/projectmanagement/?(.*)
            pathType: Prefix
            backend: 
              service:  
                name: projectmanagement-srv
                port:
                  number: 4003
          - path: /socket.io/?(.*)
            pathType: Prefix
            backend:
              service:
                name: projectmanagement-srv
                port:
                  number: 4003
          - path: /api/category/?(.*)
            pathType: Prefix
            backend:
              service:
                name: category-srv
                port: 
                  number: 4004
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-srv
                port: 
                  number: 3006
